- Added custom animation and animation register - Added version and author info

--- a/build.gradle
+++ b/build.gradle
@@ -170,8 +170,8 @@ dependencies {
 
     // Apply Mixin AP
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
-    implementation fg.deobf("curse.maven:epic-fight-mod-405076:5159623")
-    implementation fg.deobf("io.redspace.ironsspellbooks:irons_spellbooks:${irons_spells_version}")
+    compileOnly fg.deobf("curse.maven:epic-fight-mod-405076:5159623")
+    compileOnly fg.deobf("io.redspace.ironsspellbooks:irons_spellbooks:${irons_spells_version}")
     runtimeOnly fg.deobf("curse.maven:geckolib-388172:5188427")
 
     // CAELUS *****************************************************************************************************
