--- a/gradle.properties
+++ b/gradle.properties
@@ -46,14 +46,14 @@ mod_id=efiscompat
 # The human-readable display name for the mod.
 mod_name=Epic Fight & Iron's Spellbook animation compat
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
+mod_license=GNU GPLv3
 # The mod version. See https://semver.org/
-mod_version=1.0.0
+mod_version=2.0.0-beta
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=com.example.examplemod
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=YourNameHere, OtherNameHere
+mod_authors=Yukami
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+mod_description=A simple mod to fix Iron's Spellbooks animation when using Epic Fight
