Fix Server crash and removed ExCap dependency

--- a/build.gradle
+++ b/build.gradle
@@ -175,7 +175,13 @@ dependencies {
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
     implementation fg.deobf("curse.maven:epic-fight-mod-405076:5655318")
     implementation fg.deobf("io.redspace.ironsspellbooks:irons_spellbooks:${irons_spells_version}")
+    runtimeOnly fg.deobf("curse.maven:travelers-backpack-321117:5529995")
     runtimeOnly fg.deobf("curse.maven:geckolib-388172:5675221")
+    runtimeOnly fg.deobf("curse.maven:sophisticated-backpacks-422301:5756839")
+    runtimeOnly fg.deobf("curse.maven:curios-309927:5680164")
+    runtimeOnly fg.deobf("curse.maven:sophisticated-core-618298:5755388")
+    runtimeOnly fg.deobf("curse.maven:weapons-of-miracles-epicfight-918614:5647351")
+    runtimeOnly fg.deobf("curse.maven:elytra-slot-317716:5583756")
 
     // CAELUS *****************************************************************************************************
     runtimeOnly fg.deobf("curse.maven:caelus-308989:5281700")
@@ -185,8 +191,6 @@ dependencies {
 
     // CURIOS *****************************************************************************************************
     runtimeOnly fg.deobf("curse.maven:curios-309927:5680164")
-
-    implementation fg.deobf("libs:ExCap:20.9.1")
 
     // Example mod dependency using a mod jar from ./libs with a flat dir repository
     // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
