Reworked siphoning ray effect rendering Fixed hide item when using two-handed staff animation Stop animation right after continuous spells end Force cooldown on continuous skills when canceled Added left handed staff animations Added cancelling spell on scrolling mouse Delete some unused files

--- a/build.gradle
+++ b/build.gradle
@@ -180,6 +180,7 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:weapons-of-miracles-epicfight-918614:5647351")
     runtimeOnly fg.deobf("curse.maven:elytra-slot-317716:5583756")
     runtimeOnly fg.deobf("curse.maven:curios-309927:5680164")
+    runtimeOnly fg.deobf("curse.maven:embeddium-908741:5681725")
     //runtimeOnly fg.deobf("curse.maven:samurai-dynasty-848381:5672395")
     //runtimeOnly fg.deobf("curse.maven:azurelib-817423:5782756")
 
