--- a/build.gradle
+++ b/build.gradle
@@ -173,12 +173,18 @@ dependencies {
 
     // Apply Mixin AP
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
-    implementation fg.deobf("curse.maven:epic-fight-mod-405076:5922122")
+    implementation fg.deobf("curse.maven:epic-fight-mod-405076:6145747")
     implementation fg.deobf("io.redspace.ironsspellbooks:irons_spellbooks:${irons_spells_version}")
-    runtimeOnly fg.deobf("curse.maven:travelers-backpack-321117:5529995")
     runtimeOnly fg.deobf("curse.maven:geckolib-388172:5675221")
-    runtimeOnly fg.deobf("curse.maven:weapons-of-miracles-epicfight-918614:5647351")
-    runtimeOnly fg.deobf("curse.maven:elytra-slot-317716:5583756")
+    //=========TO tweak and its dependency
+    runtimeOnly fg.deobf("curse.maven:to-tweaks-irons-spells-1046916:6322784")
+    runtimeOnly fg.deobf("curse.maven:lendercataclysm-551586:6370058")
+    runtimeOnly fg.deobf("curse.maven:alexs-caves-924854:5848216")
+    runtimeOnly fg.deobf("curse.maven:apothic-attributes-898963:5634071")
+    runtimeOnly fg.deobf("curse.maven:lionfish-api-1001614:5922047")
+    runtimeOnly fg.deobf("curse.maven:placebo-283644:6274231")
+    runtimeOnly fg.deobf("curse.maven:citadel-331936:6002521")
+    //=============================
     runtimeOnly fg.deobf("curse.maven:curios-309927:5680164")
     runtimeOnly fg.deobf("curse.maven:embeddium-908741:5681725")
     //runtimeOnly fg.deobf("curse.maven:samurai-dynasty-848381:5672395")
