--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,6 @@ base {
     archivesName = mod_id
 }
 
-// Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
@@ -113,8 +112,6 @@ minecraft {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
-    // Put repositories for dependencies here
-    // ForgeGradle automatically adds the Forge maven and Maven Central for you
     exclusiveContent {
         forRepository {
             maven {
@@ -139,16 +136,31 @@ repositories {
             includeGroup "curse.maven"
         }
     }
-    maven {
-        name = "Iron's Maven - Release"
-        url = "https://code.redspace.io/releases"
+    exclusiveContent {
+        forRepository {
+            maven {
+                // Iron's Maven - Release
+                url "https://code.redspace.io/releases"
+            }
+        }
+        forRepositories(fg.repository)
+        filter {
+            includeGroup "io.redspace.ironsspellbooks"
+        }
+    }
+    exclusiveContent {
+        forRepository {
+            maven {
+                // Caelus API
+                url "https://maven.theillusivec4.top/"
+            }
+        }
+        forRepositories(fg.repository)
+        filter {
+            includeGroup "top.theillusivec4.caelus"
+        }
     }
 
-    maven { url = "https://maven.enginehub.org/repo/" }
-    maven { url = "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/" }
-    maven { url = "https://maven.theillusivec4.top" }
-    maven { url = "https://maven.blamejared.com" }
-    maven { url = "https://maven.kosmx.dev/" }
     flatDir {
         dir './libs'
     }
@@ -157,41 +169,18 @@ repositories {
 }
 
 dependencies {
-    // Specify the version of Minecraft to use.
-    // Any artifact can be supplied so long as it has a "userdev" classifier artifact and is a compatible patcher artifact.
-    // The "userdev" classifier will be requested and setup by ForgeGradle.
-    // If the group id is "net.minecraft" and the artifact id is one of ["event", "server", "joined"],
-    // then special handling is done to allow a setup of a vanilla dependency without the use of an external repository.
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
-    // Apply Mixin AP
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
-    implementation fg.deobf("curse.maven:epic-fight-mod-405076:7046104")
+
+    implementation fg.deobf("maven.modrinth:epic-fight:20.12.9")
     implementation fg.deobf("io.redspace.ironsspellbooks:irons_spellbooks:${irons_spells_version}")
-    runtimeOnly fg.deobf("curse.maven:geckolib-388172:5675221")
-    runtimeOnly fg.deobf("curse.maven:elytra-slot-317716:5583756")
-    runtimeOnly fg.deobf("curse.maven:curios-309927:5680164")
-    runtimeOnly fg.deobf("curse.maven:embeddium-908741:5681725")
-    //runtimeOnly fg.deobf("curse.maven:samurai-dynasty-848381:5672395")
-    //runtimeOnly fg.deobf("curse.maven:azurelib-817423:5782756")
 
-    // CAELUS *****************************************************************************************************
-    runtimeOnly fg.deobf("curse.maven:caelus-308989:5281700")
-
-    // PLAYER ANIMATOR ********************************************************************************************
-    runtimeOnly fg.deobf("curse.maven:playeranimator-658587:4587214")
-
-    // CURIOS *****************************************************************************************************
-    runtimeOnly fg.deobf("curse.maven:curios-309927:5680164")
-
-    // Example mod dependency using a mod jar from ./libs with a flat dir repository
-    // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
-    // The group id is ignored when searching -- in this case, it is "blank"
-    // implementation fg.deobf("blank:coolmod-${mc_version}:${coolmod_version}")
-
-    // For more info:
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
+    // Iron spell dependencies
+    runtimeOnly fg.deobf("maven.modrinth:playeranimator:1.0.2-rc1+1.20-forge")
+    runtimeOnly fg.deobf("maven.modrinth:curios:5.14.1+1.20.1")
+    runtimeOnly fg.deobf("maven.modrinth:geckolib:aVW7Z5da")
+    runtimeOnly fg.deobf("top.theillusivec4.caelus:caelus-forge:3.2.0+1.20.1")
 }
 
 mixin {
