feat: WIP port to NeoForge 1.21.1
What needs to be done before merge:

- Migrate to NeoForge networking https://docs.neoforged.net/docs/networking/
- Fix all newly added TODOs in code
- More in-game testing

--- a/build.gradle
+++ b/build.gradle
@@ -223,7 +223,7 @@ dependencies {
     localRuntime "com.illusivesoulworks.caelus:caelus-neoforge:7.0.1+1.21.1"
 
     // PLAYER ANIMATOR ********************************************************************************************
-    localRuntime "dev.kosmx.player-anim:player-animation-lib:2.0.1+1.21.1"
+    localRuntime "dev.kosmx.player-anim:player-animation-lib-forge:2.0.1+1.21.1"
 
     // CURIOS *****************************************************************************************************
     localRuntime "top.theillusivec4.curios:curios-neoforge:9.5.1+1.21.1"
